# haskell-relational-record

./: .gitignore  .hgtags  .travis.yml  Makefile  README.md  cabal.project  clean.bat  examples.md  faq.md  haddock.bat  helloworld-8.md  helloworld-9.md  index.html  index.md  install.bat  params.json  quickstart.md  relational-OracleDB.cabal  relational-SQLite3.cabal  stack.yaml  techinfo.md  test.md  tutorial.md
DB-record/: DB-record.cabal
DB-record/debian/: changelog  control  rules  watch
DB-record/src/Database/: Record.hs
DB-record/src/Database/Record/: FromSql.hs  Instances.hs  KeyConstraint.hs  Persistable.hs  Singleton.hs  TH.hs  ToSql.hs
HDBC-session/: HDBC-session.cabal
HDBC-session/debian/: changelog  control  rules  watch
HDBC-session/src/Database/HDBC/: Session.hs
examples/HDBC/MySQL/: GNUmakefile  LICENSE  example.cabal  hrr-example-HDBC-MySQL.cabal  setup.sql
examples/HDBC/MySQL/src/: Main.hs
examples/HDBC/Oracle/: README.md  hrr-example-HDBC-Oracle.cabal  hrr-oracle-example.cabal
examples/HDBC/Oracle/src/: DataSource.hs  HrrDatatypeTest.hs  create.sql  main.hs
examples/HDBC/PostgreSQL/: hrr-example-HDBC-postgresql.cabal  relational-query-HDBC-pgTest.cabal
examples/HDBC/PostgreSQL/example/: PgTestDataSource.hs  README
names-th/: names-th.cabal
names-th/debian/: changelog  control  rules  watch
persistable-record/: ChangeLog.md  persistable-record.cabal
persistable-record/debian/: changelog  control  rules
persistable-record/src/Database/: Record.hs
persistable-record/src/Database/Record/: FromSql.hs  Instances.hs  InternalTH.hs  KeyConstraint.hs  Persistable.hs  TH.hs  ToSql.hs  TupleInstances.hs
persistable-record/test/: Model.hs  nestedEq.hs
persistable-types-HDBC-pg/: persistable-types-HDBC-pg.cabal
persistable-types-HDBC-pg/example/: DS.hs  InetExample.hs  README  inet.sh
persistable-types-HDBC-pg/test/: runTest.hs
relational-join/: relational-join.cabal
relational-join/debian/: changelog  control  rules  watch
relational-join/src/Database/Relational/: Query.hs
relational-query/: ChangeLog.md  cabal-test.sh  relational-query.cabal
relational-query-HDBC/: ChangeLog.md  relational-query-HDBC.cabal
relational-query-HDBC-pgTest/: relational-join-HDBC-pgTest.cabal  relational-query-HDBC-pgTest.cabal
relational-query-HDBC-pgTest/example/: PgTestDataSource.hs
relational-query-HDBC-pgTest/example/1/: Group.hs  Membership.hs  QueryArrowExample.hs  QueryExample.hs  User.hs  create.sh  queryExample.hs  run.hs  runArrow.hs
relational-query-HDBC-pgTest/example/2/: KeyTest.hs  create.sh
relational-query-HDBC-pgTest/example/3/: History.hs  SetA.hs  SetB.hs  create.sh  drop.sh  query.hs
relational-query-HDBC-pgTest/example/4/: One.hs  Stock.hs  StockGoods.hs  create.sh  drop.sh  modifyExample.hs
relational-query-HDBC-pgTest/pgTest/: pgTest.hs
relational-query-HDBC/debian/: changelog  control  rules  watch
relational-query-HDBC/example/Oracle/: LICENSE  hrr-oracle-example.cabal
relational-query-HDBC/example/Oracle/src/: DataSource.hs  HrrDatatypeTest.hs  create.sql  delete.sql  main.hs
relational-query-HDBC/example/mysql/: example.cabal  setup.sql
relational-query-HDBC/example/mysql/src/: Main.hs  MySQLTestDataSource.hs  User.hs
relational-query-HDBC/src/Database/HDBC/: Record.hs  SqlValueExtra.hs  TH.hs
relational-query-HDBC/src/Database/Relational/: HDBC.hs
relational-query-HDBC/test/: convertibleIso.hs
relational-query-HDBC/test/SQLServer/: SQLServerTest.hs  SQLServerTestDataSource.hs  TypeCheck.hs
relational-query-HDBC/test/mysql/: Spec.hs  setup.sql
relational-query-HDBC/test/mysql/DB/: Source.hs
relational-query-HDBC/test/sqlite3/: SQLite3Test.hs  SQLite3TestDataSource.hs  runCreate.sh  runDrop.sh
relational-query/debian/: changelog  control  rules  watch
relational-query/src/Database/: Relational.hs
relational-query/src/Database/Relational/: Arrow.hs  BaseTH.hs  Compat.hs  Component.hs  Config.hs  Constraint.hs  Context.hs  Derives.hs  Effect.hs  Experiment.hs  Export.hs  ExtensibleRecord.hs  OverloadedInstances.hs  OverloadedProjection.hs  Pi.hs  Projectable.hs  ProjectableClass.hs  ProjectableExtended.hs  Projection.hs  Pure.hs  PureUTF8.hs  Query.hs  ReboundSyntax.hs  Record.hs  Relation.hs  SQL.hs  Scalar.hs  Sequence.hs  Set.hs  SimpleSql.hs  SqlSyntax.hs  Sub.hs  TH.hs  Table.hs  TupleInstances.hs  Type.hs
relational-query/test/: Conflict.hs  Export.hs  Lex.hs  Model.hs  SQLs.hs  Tool.hs  exportsEq.hs  sqlsEq.hs  sqlsEqArrow.hs
relational-record/: GNUmakefile  relational-record.cabal
relational-record-examples/: .relational-record-examples.cabal.swp  Account.hs  Branch.hs  Business.hs  Customer.hs  DataSource.hs  Department.hs  Individual.hs  LICENSE  examples.db  relational-record-examples.cabal
relational-record-examples/entity/: Branch.hs  Customer.hs  Department.hs  Individual.hs  ProductType.hs
relational-record-examples/mains/: Query.hs  examples.hs  specializedExamples.hs
relational-record-examples/orf/: DataSource.hs  Mixed.hs  Person.hs  create.sql
relational-record-examples/sql/: 3.7.1.sh  3.7.3.sh  3.7.sh  4.1.2.sh  4.3.2.sh  4.3.3a.sh  4.3.3b.sh  4.3.3c.sh  5.1.2a.sh  5.1.3.sh  5.3a.sh  6.4.1a.sh  8.1a.sh  add.sql  sql-memo
relational-record-examples/src/: .examples.hs.swp  Account.hs  Branch.hs  Business.hs  Customer.hs  DataSource.hs  Department.hs  Employee.hs  Individual.hs  Officer.hs  Product.hs  ProductType.hs  Transaction.hs  examples.hs  specializedExamples.hs
relational-schemas/: ChangeLog.md  relational-schemas.cabal
relational-schemas/debian/: changelog  control  rules  watch
schema-th/: HDBC-schema-th.cabal
schema-th/debian/: changelog  control  copyright  rules  watch
schema-th/pgTest/: PgTest.hs  PgTestDataSource.hs  runCreate.sh  runDrop.sh
schema-th/sample/1/: Group.hs  README  User.hs  querySample.hs
sql-words/: sql-words.cabal
sql-words/debian/: changelog  control  rules  watch
sql-words/test/: MonoidLaw.hs  monoidLaw.hs
text-postgresql/: text-postgresql.cabal
text-postgresql/test/: ppIso.hs  prop.hs
(+572 files in other folders)
