name:                relational-OracleDB
version:             0.1.0.0
synopsis:            Oracle DB driver for haskell-relational-record
description:         This package contains a driver of Oracle DB for haskell-relational-record.
license:             BSD3
license-file:        LICENSE
author:              Shohei YASUTAKE
maintainer:          shohei.yasutake@gmail.com
copyright:           Copyright (c) 2013 Shohei YASUTAKE
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:         base <5
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall
