name:                DB-record
version:             0.0.1.0
synopsis:            Binding between SQL database values and haskell records.
description:         This package contiains types to represent table constraints and
                     interfaces to bind between SQL database values and Haskell records.
homepage:            http://twitter.com/khibino
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
                        Database.Record.FromSql
                        Database.Record.ToSql
                        Database.Record.Persistable
                        Database.Record.Instances
                        Database.Record.KeyConstraint
                        Database.Record.Singleton
                        Database.Record
                        Database.Record.TH

  build-depends:          base <5
                        , template-haskell
                        , names-th
  hs-source-dirs:       src
  ghc-options:          -Wall
