name:                HDBC-session
version:             0.1.0.0
synopsis:            Bracketed connection for HDBC
description:         This package contains a base bracketed function
                     to call close correctly against opend DB connection.
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.HDBC.Session

  build-depends:         base <5
                       , HDBC
  hs-source-dirs:      src
  ghc-options:         -Wall

  default-language:     Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
