name:                HDBC-session
version:             0.1.2.1
synopsis:            Bracketed connection for HDBC
description:         This package contains a base bracketed function
                     to call close correctly against opend DB connection.
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013-2023 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:           GHC == 9.6.2
                     , GHC == 9.4.6
                     , GHC == 9.2.8
                     , GHC == 9.0.2
                     , GHC == 8.10.7
                     , GHC == 8.8.1, GHC == 8.8.2
                     , GHC == 8.6.1, GHC == 8.6.2, GHC == 8.6.3, GHC == 8.6.4, GHC == 8.6.5
                     , GHC == 8.4.1, GHC == 8.4.2, GHC == 8.4.3, GHC == 8.4.4
                     , GHC == 8.2.1, GHC == 8.2.2
                     , GHC == 8.0.1, GHC == 8.0.2
                     , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                     , GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4
                     , GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3
                     , GHC == 7.4.1, GHC == 7.4.2

library
  exposed-modules:     Database.HDBC.Session

  build-depends:         base <5
                       , HDBC
  hs-source-dirs:      src
  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:         -Wcompat
  if impl(ghc >= 8) && impl(ghc < 8.8)
    ghc-options:         -Wnoncanonical-monadfail-instances

  default-language:    Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
