name:                names-th
version:             0.1.0.1
synopsis:            Manipulate name strings for TH
description:         This package includes functions to manipulate name string
                     and extra library functions for Template Haskell.
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013 Kei Hibino
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                     Language.Haskell.TH.Name.CamelCase
                     Language.Haskell.TH.Lib.Extra
  build-depends:       base <5, containers, template-haskell
  hs-source-dirs:    src
  ghc-options:       -Wall

  default-language:     Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
