name:                names-th
version:             0.3.0.0
synopsis:            Manipulate name strings for TH
description:         This package includes functions to manipulate name string
                     and extra library functions for Template Haskell.
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013-2018 Kei Hibino, 2015 Shohei Murayama
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:           GHC == 8.4.1, GHC == 8.4.2, GHC == 8.4.3
                     , GHC == 8.2.1, GHC == 8.2.2
                     , GHC == 8.0.1, GHC == 8.0.2
                     , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                     , GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4
                     , GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3
                     , GHC == 7.4.1, GHC == 7.4.2

library
  exposed-modules:
                     Language.Haskell.TH.Name.CamelCase
                     Language.Haskell.TH.Lib.Extra
  build-depends:       base <5, containers, template-haskell
  hs-source-dirs:    src
  ghc-options:       -Wall

  default-language:     Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
