name:                persistable-record
version:             0.4.1.0
synopsis:            Binding between SQL database values and haskell records.
description:         This package contiains types to represent table constraints and
                     interfaces to bind between SQL database values and Haskell records.
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013-2016 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:           GHC == 8.0.1
                     , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                     , GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4
                     , GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3
                     , GHC == 7.4.1, GHC == 7.4.2

library
  exposed-modules:
                        Database.Record.FromSql
                        Database.Record.ToSql
                        Database.Record.Persistable
                        Database.Record.Instances
                        Database.Record.KeyConstraint
                        Database.Record
                        Database.Record.TH

  build-depends:          base <5
                        , template-haskell
                        , th-data-compat
                        , array
                        , containers
                        , transformers
                        , dlist
                        , names-th
  hs-source-dirs:       src
  ghc-options:          -Wall

  default-language:     Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
