name:                persistable-record
version:             0.6.0.6
synopsis:            Binding between SQL database values and haskell records.
description:         This package contains types to represent table constraints and
                     interfaces to bind between SQL database values and Haskell records.
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013-2023 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:           GHC == 9.6.2
                     , GHC == 9.4.6
                     , GHC == 9.2.8
                     , GHC == 9.0.2
                     , GHC == 8.10.7
                     , GHC == 8.8.1, GHC == 8.8.2
                     , GHC == 8.6.1, GHC == 8.6.2, GHC == 8.6.3, GHC == 8.6.4, GHC == 8.6.5
                     , GHC == 8.4.1, GHC == 8.4.2, GHC == 8.4.3, GHC == 8.4.4
                     , GHC == 8.2.1, GHC == 8.2.2
                     , GHC == 8.0.1, GHC == 8.0.2
                     , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                     , GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4
                     , GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3
                     , GHC == 7.4.1, GHC == 7.4.2
extra-source-files:  ChangeLog.md

library
  exposed-modules:
                       Database.Record.FromSql
                       Database.Record.ToSql
                       Database.Record.Persistable
                       Database.Record.TupleInstances
                       Database.Record.Instances
                       Database.Record.KeyConstraint
                       Database.Record
                       Database.Record.TH

  other-modules:
                       Database.Record.InternalTH

  build-depends:         base <5
                       , template-haskell
                       , th-data-compat
                       , th-constraint-compat
                       , th-bang-compat
                       , product-isomorphic >= 0.0.3
                       , array
                       , containers
                       , transformers
                       , dlist
                       , names-th
  if impl(ghc == 7.4.*)
    build-depends:       ghc-prim == 0.2.*

  hs-source-dirs:      src
  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:         -Wcompat
  if impl(ghc >= 8) && impl(ghc < 8.8)
    ghc-options:         -Wnoncanonical-monadfail-instances

  default-language:    Haskell2010

test-suite nested
  build-depends:         base <5
                       , quickcheck-simple
                       , persistable-record
  if impl(ghc == 7.4.*)
    build-depends:       ghc-prim == 0.2.*

  type:                exitcode-stdio-1.0
  main-is:             nestedEq.hs
  other-modules:       Model
  hs-source-dirs:      test
  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:         -Wcompat

  default-language:    Haskell2010

source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
