name:                persistable-types-HDBC-pg
version:             0.0.3.4
synopsis:            HDBC and Relational-Record instances of PostgreSQL extended types
description:         This package contains HDBC Convertible instances and
                     Relational-Record persistable instances of PostgreSQL extended types
                     Supported extended types: inet, cidr
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2015-2018 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:           GHC == 8.4.1, GHC == 8.4.2, GHC == 8.4.3
                     , GHC == 8.2.1, GHC == 8.2.2
                     , GHC == 8.0.1, GHC == 8.0.2
                     , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                     , GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4
                     , GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3
                     , GHC == 7.4.1, GHC == 7.4.2

extra-source-files:
                     example/inet.sh
                     example/DS.hs
                     example/InetExample.hs

library
  exposed-modules:
                       Database.HDBC.PostgreSQL.Instances
                       Database.HDBC.PostgreSQL.Persistable

  other-extensions:    MultiParamTypeClasses
  build-depends:       base <5
                     , bytestring
                     , dlist
                     , text-postgresql
                     , convertible
                     , HDBC
                     , persistable-record >= 0.4
                     , relational-query >= 0.10 && <0.12
                     , relational-query-HDBC
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  build-depends:         base <5
                       , relational-query >= 0.10
                       , relational-query-HDBC
                       , text-postgresql
                       , persistable-types-HDBC-pg
  if impl(ghc == 7.4.*)
    build-depends:       ghc-prim == 0.2.*

  type:                exitcode-stdio-1.0
  main-is:             runTest.hs

  hs-source-dirs:      test
  ghc-options:         -Wall

  default-language:     Haskell2010
