name:                relational-join
version:             0.0.1.0
synopsis:            Typeful relational algebraic join engine
description:         This package contiains typeful relation structure
                     and combinators for projection, product and join.
homepage:            http://twitter.com/khibino
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
                       Database.Relational.Query
                       Database.Relational.Query.AliasId
                       Database.Relational.Query.AliasId.Unsafe
                       Database.Relational.Query.Product
                       Database.Relational.Query.Table
                       Database.Relational.Query.SQL
                       Database.Relational.Query.Pi
                       Database.Relational.Query.Pi.Unsafe
                       Database.Relational.Query.Constraint
                       Database.Relational.Query.Projection
                       Database.Relational.Query.Projectable
                       Database.Relational.Query.Join
                       Database.Relational.Query.Expr
                       Database.Relational.Query.Expr.Unsafe
                       Database.Relational.Query.Sub
                       Database.Relational.Query.Type
                       Database.Relational.Query.Derives
                       Database.Relational.Query.TH

                       Database.Relational.Schema.DB2Syscat.Columns
                       Database.Relational.Schema.IBMDB2

                       Database.Relational.Schema.PgCatalog.PgAttribute
                       Database.Relational.Schema.PgCatalog.PgType
                       Database.Relational.Schema.PostgreSQL

  other-modules:
                       Database.Relational.Query.Internal.Context

                       Database.Relational.Schema.DB2Syscat.Tabconst
                       Database.Relational.Schema.DB2Syscat.Keycoluse

                       Database.Relational.Schema.PgCatalog.PgNamespace
                       Database.Relational.Schema.PgCatalog.PgClass
                       Database.Relational.Schema.PgCatalog.PgConstraint

  build-depends:         base <5
                       , array
                       , containers
                       , time
                       , sql-words
                       , bytestring
                       , text
                       , template-haskell
                       , names-th
                       , DB-record
  hs-source-dirs:      src
