name:                relational-join
version:             0.0.1.0
synopsis:            Typeful relational algebraic join engine
description:         This package contiains typeful relation structure
                     and combinators for projection, product and join.
homepage:            http://twitter.com/khibino
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
                       Database.Relational.Query
                       Database.Relational.Query.AliasId
                       Database.Relational.Query.Table
                       Database.Relational.Query.SQL
                       Database.Relational.Query.Pi
                       Database.Relational.Query.Pi.Unsafe
                       Database.Relational.Query.Constraint
                       Database.Relational.Query.Projection
                       Database.Relational.Query.Aggregation
                       Database.Relational.Query.Projectable
                       Database.Relational.Query.ProjectableExtended
                       Database.Relational.Query.Expr
                       Database.Relational.Query.Expr.Unsafe
                       Database.Relational.Query.Sub
                       Database.Relational.Query.Monad.Class
                       Database.Relational.Query.Monad.Ordering
                       Database.Relational.Query.Monad.Core
                       Database.Relational.Query.Monad.Simple
                       Database.Relational.Query.Monad.Aggregate
                       Database.Relational.Query.Relation
                       Database.Relational.Query.Type
                       Database.Relational.Query.Derives
                       Database.Relational.Query.TH

                       Database.Relational.Schema.DB2Syscat.Columns
                       Database.Relational.Schema.IBMDB2

                       Database.Relational.Schema.PgCatalog.PgAttribute
                       Database.Relational.Schema.PgCatalog.PgType
                       Database.Relational.Schema.PostgreSQL

  other-modules:
                       Database.Relational.Query.Internal.AliasId
                       Database.Relational.Query.Internal.ShowS
                       Database.Relational.Query.Internal.Product
                       Database.Relational.Query.Internal.Context
                       Database.Relational.Query.Internal.AggregatingContext
                       Database.Relational.Query.Monad.Unsafe

                       Database.Relational.Schema.DB2Syscat.Tabconst
                       Database.Relational.Schema.DB2Syscat.Keycoluse

                       Database.Relational.Schema.PgCatalog.PgNamespace
                       Database.Relational.Schema.PgCatalog.PgClass
                       Database.Relational.Schema.PgCatalog.PgConstraint

  build-depends:         base <5
                       , array
                       , containers
                       , transformers
                       , time
                       , bytestring
                       , text
                       , dlist
                       , template-haskell
                       , sql-words
                       , names-th
                       , DB-record
  hs-source-dirs:      src
