name:                relational-query-HDBC-pgTest
version:             0.0.1.0
synopsis:            Tests codes for relational-query-HDBC which depends on PostgreSQL
-- description:
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
-- copyright:
category:            Database
build-type:          Simple
cabal-version:       >=1.10

Executable example1
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , names-th
                       , persistable-record
                       , relational-query
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC
  other-modules:
                       User
                       Group
                       Membership
                       QueryExample
  main-is:             run.hs
  hs-source-dirs:      example/1, example
  ghc-options:         -Wall

Executable example2
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , names-th
                       , persistable-record
                       , relational-query
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC

  main-is:             show.hs
  hs-source-dirs:      example/2, example
  ghc-options:         -Wall

Executable example3
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , names-th
                       , persistable-record
                       , relational-query
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC

  main-is:             query.hs
  hs-source-dirs:      example/3, example
  ghc-options:         -Wall

Executable example4
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , names-th
                       , persistable-record
                       , relational-query
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC

  main-is:             modifyExample.hs
  hs-source-dirs:      example/4, example
  ghc-options:         -Wall

Test-suite postgreSQL
  build-depends:         relational-query-HDBC
                       , Cabal
                       , HDBC-postgresql
                       , bytestring
                       , text

  Type:                detailed-0.9
  Test-module:         PgTest
  hs-source-dirs:      pgTest
  ghc-options:         -Wall
