
name:                relational-query-HDBC
version:             0.0.1.0
synopsis:            HDBC instance of relational join and typed query for HDBC
description:         This package contains HDBC instance of relational-query and 
                     typed query for HDBC.
                     Generating Database table definitions and functions for
                     relational-query by reading table and index definitions
                     from Database system catalogs.
homepage:            http://twitter.com/khibino
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010

  exposed-modules:
                       Database.HDBC.Record.Persistable
                       Database.HDBC.Record.Singleton
                       Database.HDBC.Record.TH
                       Database.HDBC.Record.Statement
                       Database.HDBC.Record.Query
                       Database.HDBC.Record.Update
                       Database.HDBC.Record.Insert
                       Database.HDBC.Record.InsertQuery
                       Database.HDBC.Record.Delete
                       Database.HDBC.Record.KeyUpdate
                       Database.HDBC.Record
                       Database.HDBC.Query.TH
                       Database.HDBC.SqlValueExtra
                       Database.HDBC.Schema.Driver
                       Database.HDBC.Schema.IBMDB2
                       Database.HDBC.Schema.PostgreSQL

  other-modules:
                       Database.HDBC.Record.InternalTH

  build-depends:         base <5
                       , containers
                       , convertible
                       , template-haskell
                       , names-th
                       , persistable-record
                       , relational-query
                       , relational-schemas
                       , HDBC >=2
                       , HDBC-session
  hs-source-dirs:      src
  ghc-options:         -Wall
